non-ha-cluster/google-cloud-platform/firewall-rule-weavenet.json
{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "6783"
      ]
    },
    {
      "IPProtocol": "udp",
      "ports": [
        "6783",
        "6784"
      ]
    }
  ],
  "description": "Firewall rule for Weavenet CNI plugin",
  "direction": "INGRESS",
  "disabled": false,
  "enableLogging": false,
  "id": "",
  "kind": "compute#firewall",
  "logConfig": {
    "enable": false
  },
  "name": "kube-weavenet-cni",
  "network": "projects/XYZ_PROJECT/global/networks/kubernetes-cluster",
  "priority": 65534,
  "selfLink": "projects/XYZ_PROJECT/global/firewalls/kube-weavenet-cni",
  "sourceRanges": [
    "10.128.0.0/9"
  ]
}
